# OpenCloudOS-Kernel

./: .gitignore  MAINTAINERS  Makefile  README.md
.github/workflows/: main.yml
Documentation/admin-guide/: kernel-parameters.txt
Documentation/networking/: ip-sysctl.txt
Documentation/x86/: index.rst
arch/: Kconfig
arch/x86/: Kconfig
block/: blk-cgroup.c
crypto/: Kconfig  Makefile  ecc.c  ecc.h  eddsa.c  rsa-psspad.c  rsa.c  rsa_helper.c  rsapss_params.asn1  testmgr.c  testmgr.h
crypto/asymmetric_keys/: Makefile  public_key.c  x509_cert_parser.c  x509_public_key.c  x509_rsapss_params.asn1
drivers/dma/: Kconfig  Makefile  dmaengine.c
drivers/firmware/: Makefile
drivers/iommu/: Kconfig  Makefile  amd_iommu.c  amd_iommu_init.c  amd_iommu_types.h  arm-smmu-v3.c  arm-smmu.c  dma-iommu.c  dmar.c  hyperv-iommu.c  intel-iommu.c  intel-pasid.c  intel-svm.c  iommu.c  qcom_iommu.c  virtio-iommu.c
drivers/pci/: ats.c  msi.c  pci-acpi.c  pci.h  probe.c
drivers/powercap/: intel_rapl_common.c
fs/: Kconfig  Makefile  binfmt_elf.c
init/: Kconfig  init_task.c
kernel/: Makefile  signal.c  sysctl.c  workqueue.c
mm/: Kconfig  Makefile  compaction.c  dmem.c  dmem_reserve.c  gup.c  huge_memory.c  internal.h  khugepaged.c  memcontrol.c  memory.c  mempolicy.c  mincore.c  mprotect.c  mremap.c  pagewalk.c  swapfile.c  vmscan.c  vmstat.c
rust/: liballoc.rmeta  libbuild_error.rmeta  libcompiler_builtins.rmeta
tools/image-builder/src/txbuild/: Cargo.toml
tools/image-builder/src/txbuild/src/: gen.rs
tools/images/targets/eks-common/: Cargo.toml  build.rs
(+275 files in other folders)
