[package]
edition = "2018"
license = "Apache-2.0 OR MIT"
name = "txbuild"
publish = false
version = "0.1.0"

# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
duct = "0.13.0"
serde = {version = "1.0", features = ["derive"]}
serde_plain = "0.3.0"
toml = "0.5"
walkdir = "2"
